# gh-profiler

./: .gitignore  CHANGELOG.md  README.md  gh_profiler.py  main.py  profile_data.py  pyproject.toml
src/gh_profiler/: __init__.py  __main__.py  cli.py  gh_profiler.py  main.py
src/gh_profiler/utils/: __init__.py  analysis_utils.py  cli_utils.py  infra_utils.py  profile_data.py  profile_utils.py  summary_utils.py
tests/unit_tests/: test_summary.py
tests/unit_tests/reference_files/: reference_summaries.py
utils/: analysis_utils.py  flags.py  infra_utils.py  profile_utils.py  summary_utils.py
